test-cases/negative/test_030_incomplete_operation.lay
# negative test: incomplete operation expression
# expected: error should be thrown

the variable x of type Number is 5 plus


